# omnipresence-docs

./: .env.example  .gitignore  Makefile  README.md  docker-compose.yml  project-concept.md  project-specification.md  validate_phase1.py
.github/: copilot-instructions.md
apps/api/: pyproject.toml  requirements.txt
apps/api/app/: __init__.py  asgi.py  settings.py  urls.py  wsgi.py
apps/api/app/api/: urls.py
apps/api/app/api/views/: auth.py
apps/api/app/core/: apps.py  middleware.py  pagination.py  permissions.py
apps/api/app/models/: __init__.py  audit.py  base.py  group.py  organization.py  participant.py  presence.py  session.py
apps/api/tests/: conftest.py
apps/web/: .env.example  index.html  package.json  vite.config.ts
apps/web/src/: App.tsx
apps/web/src/api/: client.ts
apps/web/src/components/common/: index.ts
apps/web/src/router/: index.tsx
apps/web/src/store/: auth.ts  index.ts
apps/web/src/types/: api.ts
docs/: IMPLEMENTATION_PLAN.md  wbs.md
docs/technical/: api-design.md  tech-stack.md
infrastructure/docker/: api.Dockerfile  nginx.conf  web.Dockerfile
technical/: architecture.md  database-schema.md  development-setup.md  git.md
